--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <!-- Custom CSS -->
   <link href="assets/css/style.css" rel="stylesheet">
   <!-- You can change the theme colors from here -->
-  <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+  <link href="assets/css/colors/dark.css" id="theme" rel="stylesheet">
 </head>
 <body class="fix-header card-no-border fix-sidebar">
   <!-- ============================================================== -->
